<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.gellert.sunshine"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <com.gellert.sunshine.LocationEditTextPreference
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:key="@string/pref_location_key"
        android:singleLine="true"
        android:title="@string/pref_location_label"
        custom:minLength="3"/>

    <ListPreference
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_title"
        android:defaultValue="@string/pref_units_default"
        android:entries="@array/pref_units_entries"
        android:entryValues="@array/pref_units_values" />

    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_label"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default" />

    <ListPreference
        android:key="@string/pref_art_pack_key"
        android:title="@string/pref_art_pack_label"
        android:defaultValue="@string/pref_art_pack_default"
        android:entries="@array/pref_art_pack_entries"
        android:entryValues="@array/pref_art_pack_values" />

</PreferenceScreen>
